# jsoner

./: .env.dist  pyproject.toml  readme.md  start.bat  start.sh
app/: commands.py  text.py
app/handlers/: __init__.py
app/handlers/common/: __init__.py  start.py
app/handlers/user/: __init__.py  jsoner.py
app/keyboards/inline/: lang.py
app/middlewares/: user.py
data/locales/en/LC_MESSAGES/: bot.mo  bot.po
data/locales/es/LC_MESSAGES/: bot.mo  bot.po
data/locales/fr/LC_MESSAGES/: bot.mo  bot.po
data/locales/id/LC_MESSAGES/: bot.mo  bot.po
data/locales/pl/LC_MESSAGES/: bot.mo  bot.po
data/locales/ru/LC_MESSAGES/: bot.mo  bot.po
data/locales/uk/LC_MESSAGES/: bot.mo  bot.po
database/models/: user.py
database/services/: user.py
